@@ -3,6 +3,11 @@ For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 
 Any uppercase BUG_* names are modernish shell bug IDs.
 
+2022-05-29:
+
+- Fixed a bug causing an inconsistent state after a special built-in command
+  threw an error within a namespace.
+
 2022-05-27:
 
 - Fixed a bug introduced on 2022-03-05 where 'set --default', while turning
